commissioning rm-plots part 3

--- a/cut-object.html
+++ b/cut-object.html
@@ -211,7 +211,8 @@ doesn't have a worker, but it uses a similar system.
 
                 // Theses properties are visualized by the tile element
                 n_spikes: inds.length,
-                rm_spa_max: -1,
+                rm_spa_max: "",
+                rm_dir_max: "",
                 rm_dir: "",
                 rm_spa: "",
                 rm_speed: "",
