--- a/index_full.html
+++ b/index_full.html
@@ -173,15 +173,19 @@ box-shadow: inset 0 0 2px 1px #ccc;
             <div class='pane_title'>Spatial ratemap [r]</div>
             <p class="nodrag">
                 Bin size <span class="slider_val">[[options.cm_per_spa_bin]] cm</span><br>
-                <paper-slider class="nodrag" pin snaps min="0.5" max="10" step="0.5" value="{{options.cm_per_spa_bin}}" style='width:300px'></paper-slider>
+                <paper-slider pin snaps min="0.5" max="10" step="0.5" value="{{options.cm_per_spa_bin}}" style='width:300px'></paper-slider>
             </p><p class="nodrag">
                 Smoothing kernel boxcar <span class="slider_val">(2x[[options.smoothing_spa_bins]]+1) by (2x[[options.smoothing_spa_bins]]+1) bins</span><br>
                 <paper-slider pin snaps min="0" max="5" step="1" value="{{options.smoothing_spa_bins}}" style='width:300px;'></paper-slider>
             </p><p class="nodrag">
                 Ratemap frequency values are <span class="slider_val">{{_make_max_rate_caption(options.max_rate_spa)}}</span><br>
-                <paper-slider class="nodrag" pin snaps min="0" max="20" step="1" value="{{options.max_rate_spa}}" style='width:300px'></paper-slider>
+                <paper-slider pin snaps min="0" max="20" step="1" value="{{options.max_rate_spa}}" style='width:300px'></paper-slider>
             </p><p>
                 The true peak rate is shown as "spa max" when you move your cursor over a group.
+            </p>
+            <p class="nodrag">
+                Ratemap height:<span class="slider_val">{{_make_spa_rm_height_caption(options.spa_rm_height)}}</span><br>
+                <paper-slider pin snaps min="0" max="400" step="20" value="{{options.spa_rm_height}}"></paper-slider>
             </p>
         </floating-pane>
         
@@ -189,13 +193,15 @@ box-shadow: inset 0 0 2px 1px #ccc;
             <div class='pane_title'>Directional ratemap [c]</div>
             <p class="nodrag">
                 Bin size <span class="slider_val">[[options.deg_per_dir_bin]] degrees</span><br>
-                <paper-slider class="nodrag" pin snaps min="2" max="15" step="1" value="{{options.deg_per_dir_bin}}" style='width:300px'></paper-slider>
+                <paper-slider  pin snaps min="2" max="15" step="1" value="{{options.deg_per_dir_bin}}" style='width:300px'></paper-slider>
             </p><p class="nodrag">
                 Smoothing kernel boxcar <span class="slider_val">([[options.smoothing_dir_bins]]x2+1) bins</span><br>
-                <paper-slider class="nodrag" pin snaps min="0" max="10" step="1" value="{{options.smoothing_dir_bins}}" style='width:300px'></paper-slider>
+                <paper-slider pin snaps min="0" max="10" step="1" value="{{options.smoothing_dir_bins}}" style='width:300px'></paper-slider>
             </p><p>
                 Note that in 2-spot LED mode, the relative position of the two LEDs is used, in 1-spot LED mode,
                  the direction of movement is used (this is sometimes refered to as "displacement direction").
+            </p><p>
+                The true peak rate is shown as "dir max" when you move your cursor over a group.
             </p>
         </floating-pane>
 
@@ -446,7 +452,8 @@ the_app.initializeDefaultOptions = function(ev) {
         use_n_leds: 2,
         speed_filter_mps: 4,
         pos_smoothing_s: 0.2,
-        header_filter: ''
+        header_filter: '',
+        spa_rm_height: 120
     };
 }
 
@@ -475,6 +482,9 @@ the_app._make_pos_smoothing_caption = function(v){
     return v > 0 ? v + " s" : "turned off";
 }
 
+the_app._make_spa_rm_height_caption = function(v){
+    return v > 0 ? "stretch to " + v + "px" : "one pixel per bin";
+}
 the_app.addEventListener('dom-change', function(){
     window.c = document.getElementsByTagName('cut-object')[0]; //debug only
 })
