--- a/managed-canvas.html
+++ b/managed-canvas.html
@@ -66,7 +66,9 @@ TODO: update comments
 <link rel="import" href="bower_components/polymer/polymer.html">
 
 <dom-module id="managed-canvas">
-<template></template>
+<template>
+    
+</template>
 <script>
 "use strict";
 
@@ -77,15 +79,29 @@ Polymer({
             type: String,
             value: "",
             observer: '_update'
+        },
+        fix_height: {
+            type: Number,
+            value: 0,
+            observer: '_height_changed'
         }
-    },
-    _update: function(){
+    }, _update: function(){
         var old = Polymer.dom(this.root).firstChild;
         if(old){
             Polymer.dom(this.root).removeChild(old);
         }
         if(Utils.canvas_manager && this.canv_id){
-            Polymer.dom(this.root).appendChild(Utils.canvas_manager.get_canvas(this.canv_id));
+            let el_canv = Utils.canvas_manager.get_canvas(this.canv_id);
+            this._update_canv_style(el_canv);
+            Polymer.dom(this.root).appendChild(el_canv);
+        }
+    }, _height_changed: function(){
+        let el_canv = Utils.canvas_manager.get_canvas(this.canv_id);
+        this._update_canv_style(el_canv)
+    }, _update_canv_style: function(el_canv){
+        if(el_canv){
+            el_canv.style.height = this.fix_height? this.fix_height + "px" : "";
+            el_canv.style.imageRendering = "pixelated";            
         }
     }
 });
