--- a/rm-plots.html
+++ b/rm-plots.html
@@ -907,7 +907,7 @@ var use_mask = function(vector, mask, val){
                 okey._rm_spa_other = null;
                 okey._rm_dir_other = null;
                 okey._rm_speed_other = null;
-                okey._rm_other_options = null;
+                okey._rm_other_options = {};
                 okey._rm_is_on_worker = false;
             }
 
