--- a/tac-plots.html
+++ b/tac-plots.html
@@ -304,7 +304,7 @@ var is_equal_simple = function(a, b){
                 cm.free_canvas(okey._tac_other);
                 okey.tac = null;
                 okey._tac_other = null;
-                okey._tac_other_options = null;
+                okey._tac_other_options = {};
                 okey._tac_is_on_worker = false;
             }
 
